--- a/chrome.css
+++ b/chrome.css
@@ -1,11 +1,35 @@
+/*
+
+MIT License
+
+Copyright (c) 2024 green.
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+*/
+
 * {
   --urlbarView-item-inline-padding: 8px !important;
   --urlbarView-item-block-padding: 12px !important;
 }
 
 #urlbar[breakout-extend] {
-  top: 28vh !important;
-  margin-top: calc(-1 * var(--urlbar-height)) !important;
   #identity-permission-box, #tracking-protection-icon-container, #page-action-buttons {
     display: none !important;
   }
@@ -27,7 +51,7 @@
   }
 }
 
-.urlbarView-title, .urlbarView-title-separator, .urlbarView-action, urlbarView-url {
+.urlbarView-title, .urlbarView-title-separator, .urlbarView-action, .urlbarView-url {
   margin-top: auto !important;
   margin-bottom: auto !important;
 }
@@ -73,4 +97,8 @@
       color: color-mix(in srgb, var(--zen-colors-primary) 30%, lightgray) !important;
     }
   }
+}
+
+#zen-current-workspace-indicator {
+  display: none;
 }
